--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
     <aside id="stats">
         <h2>HIGH SCORES</h2>
         <ol>
+            <li>LAURENT !</li>
             <li>CDH</li>
             <li>SEB</li>
             <li>J-B</li>
-            <li>MIN</li>
+            <li>MINA</li>
         </ol>
 
     </aside>
