--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <li>J-B</li>
             <li>MINA</li>
         </ol>
+        <h2>MON SCORE</h2>
+        <h2 class="score">0</h2>
+
 
     </aside>
     
